# smart-astro

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  before_install.sh  build.sh  smart-astro.pro
cmake/: CMakeLists.txt  Utils.cmake
cmake/Modules/: FindCspice.cmake  Findsmart-math.cmake  Findsmart-uq.cmake  LibFindSmart.cmake
examples/: CMakeLists.txt  example.cpp  example_OPPED_IPA_3dof.cpp  example_OPPED_IPA_6dof.cpp  example_OPPED_IPA_cheby.cpp  example_OPPED_IPA_nonintrusive.cpp  example_OPPED_IPA_reentry.cpp  example_OPPED_IPA_taylor.cpp  example_astrobody.cpp  example_celestialobject.cpp  example_charged_3dof.cpp  example_charged_6dof.cpp  example_charged_MEO.cpp  example_conversioncoord.cpp  example_cspice.cpp  example_dearth_analytical.cpp  example_dearth_orb.cpp  example_dearth_semianalytical.cpp  example_ephemerides.cpp  example_hamiltonian.cpp  example_magnetic_semianalytical.cpp  example_template.cpp  test_celestialobject.cpp  test_conversioncoord.cpp  test_generalfunct.cpp
include/: config.h.in  smartastro.h  smartastro.h.in  smartastro_utils.h
include/Astro-Core/: conversion_frames.h  conversion_time.h  orbital_elements.h  smart_matrix.h  smart_vector.h
include/Astrodynamics/: base_astrodynamics.h  base_dearth.h  constant_thrust.h  cr3bp_3dof.h  d2b_earth.h  d2bp_3dof.h  dearth_6dof.h  dearth_hamiltonian.h  dearth_semianalytical.h  stark.h
include/Ephemerides/: analytical_planets.h  smartastro_ephemerides.h
include/Propagators/: base_propagator.h  kepler_propagator.h  smartastro_propagators.h
irilib/: CMakeLists.txt  IRI_wrapper.h  IRIw.cpp
irilib/fortran_source/: cira.for  igrf.for  iriflip.for  irifun.for  irisub.for
src/: config.h  constants.h  exception.h  main.cpp  smartastro.h  smartastro.h.in  smartastro_utils.cpp
src/Astro-Core/: conversion_coordinates.cpp  conversion_coordinates.h  conversion_frames.cpp  conversion_frames.h  conversion_time.cpp  orbital_elements.cpp  orbital_elements.h  smart_matrix.cpp  smart_matrix.h  smart_vector.cpp  smartastro_astrocore.h  spice_general_functions.cpp  spice_general_functions.h
src/AstroBodies/: artificial_object.cpp  artificial_object.h  asteroid.cpp  asteroid.h  astro_body.cpp  astro_body.h  astroid.cpp  astroid.h  celestial_object.cpp  celestial_object.h  man_made_object.cpp  man_made_object.h  planet.cpp  planet.h
src/AstroData/SpiceKernels/: spiceKernelNames.h
src/AstroData/SpiceKernels/fk/: earth_topo_050714.tf  earth_topo_custom.tf  earthstns_custom.tf
src/AstroData/SpiceKernels/lsk/: naif0012.tls  spicelsk.h
src/AstroData/SpiceKernels/pck/: earth_000101_190127_181105.bpc  pck00010.tpc
src/AstroData/SpiceKernels/spk/: earthstns_custom.bsp  earthstns_itrf93_custom.cmt
src/AstroUtils/: smartastro_utils.cpp  smartastro_utils.h
src/Astrodynamics/: SCCal.h  base_astrodynamics.cpp  base_dearth.cpp  constant_thrust.cpp  cr3bp_3dof.cpp  d2b_earth.cpp  d2bp_3dof.cpp  dearth_3dof.cpp  dearth_3dof.h  dearth_6dof.cpp  dearth_hamiltonian.cpp  dearth_mixedvar.cpp  dearth_mixedvar.h  dearth_orb.cpp  dearth_orb.h  dearth_semianalytical.cpp  smartastro_astrodynamics.h  stark.cpp
src/Controller/: parameterinputcontroller.cpp  parameterinputcontroller.h
src/Ephemerides/: analyticalPlanetsEphemeris.cpp  analyticalPlanetsEphemeris.h  analytical_planets.cpp  analytical_planets.h  base_ephemeris.cpp  base_ephemeris.h  integratedEphemeris.cpp  integratedEphemeris.h  keplerEphemeris.cpp  keplerEphemeris.h  smartastro_ephemerides.h  spiceEphemeris.cpp  spiceEphemeris.h
src/Model/: testModel.cpp  testModel.h
src/Observations/: azimuthElevationObservation.cpp  azimuthElevationObservation.h  base_observation.cpp  base_observation.h  rangeObservation.cpp  rangeObservation.h  rangeRateObservation.cpp  rangeRateObservation.h  smartastro_observations.h
src/Propagators/: kepler_propagator.cpp  perturbation_propagator.cpp  perturbation_propagator.h
src/SMART-ASTRO_GUI/: SMART-ASTRO_GUI.pro  answerdialog.cpp  answerdialog.h  answerdialog.ui  genericfunctiondialog.cpp  genericfunctiondialog.h  genericfunctiondialog.ui  mainwindow.cpp  mainwindow.ui  parameterinputdialog.cpp  parameterinputdialog.h  parameterinputdialog.ui
src/SMART-ASTRO_GUI/Controller/: parameterinputcontroller.cpp  parameterinputcontroller.h
src/Sensors/: azimuthElevationSensor.cpp  azimuthElevationSensor.h  base_sensor.cpp  base_sensor.h  groundStation.cpp  groundStation.h  rangeRateSensor.cpp  rangeRateSensor.h  rangeSensor.cpp  rangeSensor.h  smartastro_sensors.h
src/View/: answerdialog.cpp  answerdialog.h  answerdialog.ui  genericfunctiondialog.cpp  genericfunctiondialog.h  genericfunctiondialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  parameterinputdialog.cpp  parameterinputdialog.h  parameterinputdialog.ui
test/: testConversion.cpp  testSmartAstro.cpp
